compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__bit_array_invalid_segment.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1112
expression: "\nfn main() {\n    <<72, 101, 108, 108, 111, 44, 32, 74, 111, 101, const>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn main() {
    <<72, 101, 108, 108, 111, 44, 32, 74, 111, 101, const>>
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:53
  │
3 │     <<72, 101, 108, 108, 111, 44, 32, 74, 111, 101, const>>
  │                                                     ^^^^^ I was not expecting this

Found the keyword `const`, expected one of: 
- `>>`
- a bit array segment
